# grapes

./: .cspell.json  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  404.html  CHANGELOG.md  Justfile  README.md  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml  stable  versions.json
.config/: cspell.config.yaml
.config/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.shared.yaml  mkdocs.yaml  python.just
.config/linters/: pyrightconfig.json
.config/mise/: config.toml
.config/release-please/: .manifest.json  config.json
.github/copier/: .copier-answers.python.yaml  .copier-answers.release.yaml  .copier-answers.share.yaml  .copier-answers.shared.yaml  mkdocs.yaml
.github/workflows/: auto-repo.yaml  bench.yaml  docs-dev.yaml  docs-stable.yaml  docs-test.yaml  docs.yaml  mega-linter.yaml  pr.yaml  release-please.yaml  release.yaml  repo.yaml  shared-docs.yaml  test.yaml
0.1/: 404.html  index.html  objects.inv  sitemap.xml
0.1/SUMMARY/: index.html
0.1/search/: search_index.json
SUMMARY/: index.html
api/SUMMARY/: index.html
assets/javascripts/: bundle.13a4f30d.min.js
benches/logging/: test_logging.py  test_loguru.py
demo/: log.py  timing.py
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev.dev/: 404.html  index.html  sitemap.xml
dev.dev/SUMMARY/: index.html
docs/: README.md
docs/css/: fonts.css
examples/: human_duration.py  log.py  logging_.py  parallel.py  pretty.py  pretty_duration.py  timing.py
megalinter-reports/: .cspell.json  kics-results.sarif  mega-linter-report.json  megalinter-report.md  megalinter-report.sarif
scripts/: pre-build.sh
search/: search_index.json
(+396 files in other folders)
