#:schema https://json.schemastore.org/pyproject.json
# https://packaging.python.org/en/latest/specifications/pyproject-toml/

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = ["icecream~=2.1.4"]
exp = [
  "comet-ml~=3.47.6",
  "liblaf-avocado~=0.1.0",
  "liblaf-banana~=0.1.0",
  "pytetwild~=0.1.dev1",
]

[project]
authors = [
  { email = "30631553+liblaf@users.noreply.github.com", name = "liblaf" },
]
dependencies = [
  "felupe~=9.1.0",
  "jaxtyping~=0.2.36",
  "lazy-loader~=0.4",
  "pyvista~=0.44.2",
  "scipy~=1.15.1",
]
description = "Add your description here"
keywords = []
license = "MIT"
name = "liblaf-grapes"
readme = "docs/README.md"
requires-python = "~=3.12,<3.13"
version = "0.0.0"

[project.urls]
"Changelog" = "https://github.com/liblaf/grapes/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/liblaf/grapes"
"Issue Tracker" = "https://github.com/liblaf/grapes/issues"
"Release Notes" = "https://github.com/liblaf/grapes/releases"
"Source Code" = "https://github.com/liblaf/grapes"

[tool.check-wheel-contents]
ignore = ["W002"]

[tool.hatch.build.targets.wheel]
packages = ["src/grapes"]

[tool.pixi.dependencies]
jax = "~=0.4.35"
jaxlib = { build = "*cuda*" }

[tool.pixi.environments]
default = { features = ["dev", "exp"] }

[tool.pixi.project]
channel-priority = "disabled"
channels = ["anaconda", "conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
liblaf-grapes = { editable = true, path = "." }

[tool.pixi.system-requirements]
cuda = "12"
libc = { family = "glibc", version = "2.40" }
linux = "6.6"
